--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   share_plus: 11.0.0
-
+  flutter_native_splash:
+  flutter_launcher_icons:
 dev_dependencies:
   flutter_test:
     sdk: flutter
