--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,7 @@ dependencies:
   responsive_framework: 
   flutter_localizations:
     sdk: flutter
-  share_plus: 11.0.0
-  flutter_native_splash:
+  share_plus:
   flutter_launcher_icons:
 dev_dependencies:
   flutter_test:
