chore: update app package name and add change_app_package_name dependency
Update the app package name from 'com.example.hadith_nawawi_audio' to 'com.ashwah.hadith_nawawi_audio' across Android and iOS configurations. Added 'change_app_package_name' dependency to facilitate package name changes in the future.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   share_plus:
+  change_app_package_name:
   flutter_launcher_icons:
 dev_dependencies:
   flutter_test:
