docs: add privacy policy and update app config with privacy URL
Add a new PRIVACY.md file detailing the app's privacy policy, which clarifies that no personal data is collected and explains local storage usage. Also, update AppInfo.xcconfig to include the privacy policy URL for user reference.

--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,10 @@
 PRODUCT_NAME = hadith_nawawi_audio
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.hadithNawawiAudio
+PRODUCT_BUNDLE_IDENTIFIER = com.ashwah.hadith_nawawi_audio
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
+
+// Privacy Policy URL
+PRIVACY_POLICY_URL = https://github.com/your-username/nawawi_40_hadith_app/blob/main/PRIVACY.md
