chore(android): add keystore configuration and update .gitignore
Update the Android build configuration to include keystore properties for release signing. Additionally, modify .gitignore files to exclude sensitive keystore and key property files from version control.

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+android/key.properties
+android/key.jks
+
+# Add key.properties and keystore files to ignore list
+android/app/key.properties
+**/*.keystore
+**/*.jks
