--- a/android/.gitignore
+++ b/android/.gitignore
@@ -6,7 +6,11 @@ gradle-wrapper.jar
 /local.properties
 GeneratedPluginRegistrant.java
 .cxx/
-
+android/key.properties
+android/key.jks
+android/key.properties
+android/key.jks
+android/upload-keystore.jks
 # Remember to never publicly share your keystore.
 # See https://flutter.dev/to/reference-keystore
 key.properties
